[package]
name = "rustboy"
version = "0.1.0"
edition = "2021"

[lib]
crate-type = ["cdylib", "rlib"]

[dependencies]
byteorder = "1.4.3"
num = "0.4.0"
mockall = "0.11.3"
bincode = "1.3.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_with = "3.4.0"

[dependencies.itertools]
version = "0.10.5"
features = ["use_alloc"]

[dev-dependencies]
assert_hex = "0.2.2"
test-case = "1.2.1"

[profile.release]
opt-level = "s"
