[package]
name = "rustboy-core"
version = "0.2.0"
description = "Core library of the Rustboy Gameboy Color emulator."
homepage = "https://github.com/vrptnc/rustboy-core"
repository = "https://github.com/vrptnc/rustboy-core"
edition = "2021"
rust-version = "1.69.0"
license = "MIT"


[dependencies]
byteorder = "1.4.3"
num = "0.4.0"
mockall = "0.11.3"
bincode = "1.3.3"
serde = { version = "1.0.189", features = ["derive"] }
serde_with = "3.4.0"

[dependencies.itertools]
version = "0.10.5"
features = ["use_alloc"]

[dev-dependencies]
assert_hex = "0.2.2"
test-case = "1.2.1"

[profile.release]
opt-level = "s"
